fix: 오늘의 습관 목록수정 nowrap

--- a/src/pages/HabitsPage/HabitsPage.module.css
+++ b/src/pages/HabitsPage/HabitsPage.module.css
@@ -173,6 +173,7 @@
   color: #818181;
 
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .HabitList {
